--- a/quadratic/styles.css
+++ b/quadratic/styles.css
@@ -1,8 +1,10 @@
 .container
 {
-    border: black;
+    border:#5986c5;
+    background:#223b57;
     border-width: 5px;
     border-style: solid;
+    border-radius: 12px;
     position: absolute;
     padding: 15px;
     top: 50%;
@@ -33,13 +35,32 @@
 
 #calculate-button
 {
+    content: "Calculate";
+    background:#5986c5;
+    border-radius: 12px;
     margin-top: 10px;
     width: 150px;
     height: 50px;
 }
 
-.background
+body
 {
-    opacity: 0;
-    transi
+    background-image: url(test.jpg);
+    background-size: contain;
+    opacity: 100;
+    transition: opacity 200ms ease-in-out;
+    color: #bbbbbb;
+    font-family: sans-serif;
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
 }
