--- a/quadratic/styles.css
+++ b/quadratic/styles.css
@@ -1,5 +1,7 @@
 .container
 {
+    color: #bbbbbb;
+    font-family: sans-serif;
     border:#5986c5;
     background:#223b57;
     border-width: 5px;
@@ -33,9 +35,8 @@
     margin-top: 10px;
 }
 
-#calculate-button
+.main-button
 {
-    content: "Calculate";
     background:#5986c5;
     border-radius: 12px;
     margin-top: 10px;
@@ -43,14 +44,16 @@
     height: 50px;
 }
 
-body
+.main
 {
     background-image: url(test.jpg);
     background-size: contain;
+}
+
+.fade
+{
     opacity: 100;
     transition: opacity 200ms ease-in-out;
-    color: #bbbbbb;
-    font-family: sans-serif;
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
