--- a/quadratic/css/global.css
+++ b/quadratic/css/global.css
@@ -1,9 +1,9 @@
 .container
 {
     color: #bbbbbb;
-    font-family: sans-serif;
     border:#5986c5;
     background:#223b57;
+    font-family: sans-serif;
     border-width: 5px;
     border-style: solid;
     border-radius: 12px;
@@ -14,6 +14,11 @@
     transform: translate(-50%, -50%);
     place-items: center;
     text-align: center;
+}
+
+.text-monospace
+{
+    font-family: "Courier New" !important;
 }
 
 .number-box
@@ -44,7 +49,7 @@
     height: 50px;
 }
 
-.main
+body
 {
     background-image: url(../resources/background.jpg);
     background-size: contain;
