--- a/css/minmaxsort.css
+++ b/css/minmaxsort.css
@@ -2,3 +2,17 @@
 {
     margin-bottom: 10px;
 }
+
+.text-box
+{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+.fixed-width
+{
+    width: 600px;
+    word-wrap: break-word;
+}
