--- a/css/minmaxsort.css
+++ b/css/minmaxsort.css
@@ -9,6 +9,8 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
+    font: inherit;
+    font-size: 16pt;
 }
 
 .fixed-width
