--- a/css/global.css
+++ b/css/global.css
@@ -22,6 +22,9 @@ a
     padding: 15px;
     top: 50%;
     left: 50%;
+    width: 50%;
+    max-width: 600px;
+    word-wrap: break-word;
     transform: translate(-50%, -50%);
     place-items: center;
     text-align: center;
@@ -96,4 +99,12 @@ a
     100% {
         opacity: 1;
      }
+}
+
+@media(max-width: 800px)
+{
+    .container
+    {
+        width: 100% !important;
+    }
 }
