Initial staight line fitting

--- a/css/global.css
+++ b/css/global.css
@@ -72,6 +72,16 @@ a:hover
     margin-top: 10px;
 }
 
+.text-box
+{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font: inherit;
+    font-size: 70%;
+}
+
 .main-button {
     margin-top: 10px;
     height: 50px;
