Get matrix negative

--- a/css/global.css
+++ b/css/global.css
@@ -105,16 +105,18 @@ h5
     transition: all 0.1s;
 }
 
+.secondary-button {
+    background: rgb(186, 149, 106);
+    height: auto;
+    width: auto;
+}
+
 .main-button:hover:enabled {
-    background: rgba(106, 179, 186, 0.7);
+    background: rgba(255, 255, 255, 0.85);
 }
 
 .danger {
-    background: rgba(200, 20, 20, 1);
-}
-
-.danger:hover {
-    background: rgba(200, 20, 20, 0.7);
+    background: rgb(200, 56, 20);
 }
 
 a.nav-button
