--- a/css/matrix.css
+++ b/css/matrix.css
@@ -24,4 +24,11 @@ table
     border-left: 1px solid;
     border-right: 1px solid;
     border-radius: 12px;
+    table-layout: fixed;
+    width: 50%;
+}
+
+td
+{
+    word-wrap: break-word;
 }
