--- a/css/global.css
+++ b/css/global.css
@@ -80,13 +80,22 @@ h3 {
 
 .dropdown {
     font: inherit;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.user-input {
+    margin-bottom: 0.5rem;
+}
+
+.control-buttons {
+    margin: 0.5rem 0;
 }
 
 .number-box {
     width: 3rem;
     margin-right: 10px;
+    height: 30px;
 }
 
 .solution-box {
@@ -107,8 +116,6 @@ h3 {
 .main-button {
     color: rgb(247, 247, 247);
     margin-top: 10px;
-    height: 50px;
-    width: 150px;
     border: 0;
     border-radius: 0.12em;
     background: rgb(72, 129, 134);
@@ -118,8 +125,6 @@ h3 {
 
 .secondary-button {
     background: rgb(186, 149, 106);
-    height: auto;
-    width: auto;
 }
 
 .main-button:hover:enabled {
